[package]
name = "RustMathPerf01"
version = "0.1.0"
authors = ["Espen Harlinn <espen@harlinn.no>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3
lto = true

[dependencies]
chrono = "0.4"
lerp = "0.4"
libm = "0.2.1"
